--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "0.9.0",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
-    "sass-embedded": "^1.82.0"
+    "@nuxt/types": "^2.18.1",
+    "@nuxt/typescript-build": "^3.0.2",
+    "sass-embedded": "^1.82.0",
+    "typescript": "^5.7.2"
   }
 }
